src/snapshots/purs_oxide__indexed_module__tests__duplicate_data_decl.snap
---
source: src/indexed_module.rs
expression: "index_module(indoc!(\"\n        module Test where\n        data Foo\n        data Foo\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            name: "Test",
        },
        types: {
            AbsoluteName {
                module: ModuleId {
                    name: "Test",
                },
                name: Symbol {
                    text: "Foo",
                },
            }: Data(
                DataDecl {
                    type_: Data,
                    name: AbsoluteName {
                        module: ModuleId {
                            name: "Test",
                        },
                        name: Symbol {
                            text: "Foo",
                        },
                    },
                    params: [],
                    kind: None,
                    constructors: [],
                },
            ),
        },
        values: {},
        classes: {},
        decls_ref_loc: {
            DeclId(
                Id {
                    value: 1,
                },
            ): 27,
        },
        filename: "test.purs",
    },
    [
        Diagnostic {
            span: SourceSpan {
                decl: Module(
                    ModuleId(
                        Id {
                            value: 2,
                        },
                    ),
                ),
                start: 27,
                end: 35,
            },
            message: "Duplicate type declaration Foo",
        },
    ],
)
