src/snapshots/purs_oxide__indexed_module__tests__duplicate_value.snap
---
source: src/indexed_module.rs
expression: "index_module(indoc!(\"\n        module Test where\n        foo = 1\n        bar = 2\n        foo = 1\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            name: "Test",
        },
        types: {},
        values: {
            AbsoluteName {
                module: ModuleId {
                    name: "Test",
                },
                name: Symbol {
                    text: "foo",
                },
            }: ValueDecl {
                name: AbsoluteName {
                    module: ModuleId {
                        name: "Test",
                    },
                    name: Symbol {
                        text: "foo",
                    },
                },
                type_: None,
                equations: [
                    CaseBranch {
                        pats: [],
                        expr: Unconditional(
                            Located(
                                SourceSpan {
                                    decl: Module(
                                        ModuleId {
                                            name: "Test",
                                        },
                                    ),
                                    start: 24,
                                    end: 25,
                                },
                                Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                            ),
                        ),
                    },
                ],
            },
            AbsoluteName {
                module: ModuleId {
                    name: "Test",
                },
                name: Symbol {
                    text: "bar",
                },
            }: ValueDecl {
                name: AbsoluteName {
                    module: ModuleId {
                        name: "Test",
                    },
                    name: Symbol {
                        text: "bar",
                    },
                },
                type_: None,
                equations: [
                    CaseBranch {
                        pats: [],
                        expr: Unconditional(
                            Located(
                                SourceSpan {
                                    decl: Module(
                                        ModuleId {
                                            name: "Test",
                                        },
                                    ),
                                    start: 32,
                                    end: 33,
                                },
                                Literal(
                                    Integer(
                                        2,
                                    ),
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
        classes: {},
        decls_ref_loc: {
            DeclId(
                Id {
                    value: 1,
                },
            ): 34,
            DeclId(
                Id {
                    value: 2,
                },
            ): 26,
        },
        filename: "test.purs",
    },
    [
        Diagnostic {
            start: 34,
            end: 41,
            message: "Duplicate value declaration foo",
            file: "test.purs",
        },
    ],
)
