src/snapshots/purs_oxide__indexed_module__tests__foreign_import.snap
---
source: src/indexed_module.rs
expression: "index_module(indoc!(\"\n        module Test where\n        foreign import foo :: Int\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            name: "Test",
        },
        types: {},
        values: {
            AbsoluteName {
                module: ModuleId {
                    name: "Test",
                },
                name: Symbol {
                    text: "foo",
                },
            }: ValueDecl {
                name: AbsoluteName {
                    module: ModuleId {
                        name: "Test",
                    },
                    name: Symbol {
                        text: "foo",
                    },
                },
                type_: Some(
                    Located(
                        SourceSpan {
                            decl: Decl(
                                AbsoluteName {
                                    module: ModuleId {
                                        name: "Test",
                                    },
                                    name: Symbol {
                                        text: "foo",
                                    },
                                },
                            ),
                            start: 22,
                            end: 25,
                        },
                        TypeConstructor(
                            QualifiedName {
                                module: None,
                                name: Symbol {
                                    text: "Int",
                                },
                            },
                        ),
                    ),
                ),
                equations: [],
            },
        },
        classes: {},
        decls_ref_loc: {
            DeclId(
                Id {
                    value: 1,
                },
            ): 18,
        },
    },
    [],
)
