src/snapshots/purs_oxide__indexed_module__tests__index_data_decl.snap
---
source: src/indexed_module.rs
expression: "index_module(indoc!(\"\n        module Test where\n        data Foo = Foo | Bar\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            name: "Test",
        },
        types: {
            AbsoluteName {
                module: ModuleId {
                    name: "Test",
                },
                name: Symbol {
                    text: "Foo",
                },
            }: Data(
                DataDecl {
                    type_: Data,
                    name: AbsoluteName {
                        module: ModuleId {
                            name: "Test",
                        },
                        name: Symbol {
                            text: "Foo",
                        },
                    },
                    params: [],
                    kind: None,
                    constructors: [
                        Located(
                            SourceSpan {
                                decl: Decl(
                                    DeclId {
                                        namespace: Type,
                                        module: ModuleId {
                                            name: "Test",
                                        },
                                        name: Symbol {
                                            text: "Foo",
                                        },
                                    },
                                ),
                                start: 11,
                                end: 14,
                            },
                            Commented(
                                [],
                                DataConstructorDeclarationData {
                                    name: Symbol {
                                        text: "Foo",
                                    },
                                    fields: [],
                                },
                            ),
                        ),
                        Located(
                            SourceSpan {
                                decl: Decl(
                                    DeclId {
                                        namespace: Type,
                                        module: ModuleId {
                                            name: "Test",
                                        },
                                        name: Symbol {
                                            text: "Foo",
                                        },
                                    },
                                ),
                                start: 17,
                                end: 20,
                            },
                            Commented(
                                [],
                                DataConstructorDeclarationData {
                                    name: Symbol {
                                        text: "Bar",
                                    },
                                    fields: [],
                                },
                            ),
                        ),
                    ],
                },
            ),
        },
        values: {},
        classes: {},
        decls_ref_loc: {
            DeclId(
                Id {
                    value: 1,
                },
            ): 18,
        },
        filename: "test.purs",
    },
    [],
)
