src/snapshots/purs_oxide__indexed_module__tests__type_alias.snap
---
source: src/indexed_module.rs
expression: "index_module(indoc!(\"\n        module Test where\n        type Foo = Int\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            name: "Test",
        },
        types: {
            AbsoluteName {
                module: ModuleId {
                    name: "Test",
                },
                name: Symbol {
                    text: "Foo",
                },
            }: Type(
                TypeSynonymDecl {
                    name: AbsoluteName {
                        module: ModuleId {
                            name: "Test",
                        },
                        name: Symbol {
                            text: "Foo",
                        },
                    },
                    params: [],
                    body: Located(
                        SourceSpan {
                            start: 29,
                            end: 32,
                        },
                        TypeConstructor(
                            QualifiedName {
                                module: None,
                                name: Symbol {
                                    text: "Int",
                                },
                            },
                        ),
                    ),
                },
            ),
        },
        values: {},
        classes: {},
    },
    [],
)
