src/snapshots/purs_oxide__indexed_module__tests__type_sig_without_equations_2.snap
---
source: src/indexed_module.rs
expression: "index_module(indoc!(\"\n        module Test where\n        foo :: Int\n        bar = 1\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            name: "Test",
        },
        types: {},
        values: {
            AbsoluteName {
                module: ModuleId {
                    name: "Test",
                },
                name: Symbol {
                    text: "bar",
                },
            }: ValueDecl {
                name: AbsoluteName {
                    module: ModuleId {
                        name: "Test",
                    },
                    name: Symbol {
                        text: "bar",
                    },
                },
                type_: None,
                equations: [
                    CaseBranch {
                        pats: [],
                        expr: Unconditional(
                            Located(
                                SourceSpan {
                                    start: 35,
                                    end: 36,
                                },
                                Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
        classes: {},
    },
    [
        Diagnostic {
            start: 18,
            end: 28,
            message: "Type signature of foo should be followed by its definition",
            file: "test.purs",
        },
    ],
)
