src/snapshots/purs_oxide__indexed_module__tests__type_sig_without_equations_3.snap
---
source: src/indexed_module.rs
expression: "index_module(indoc!(\"\n        module Test where\n        foo :: Int\n        data Foo\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            [salsa id]: 0,
            name: "Test",
        },
        types: {
            AbsoluteName {
                [salsa id]: 0,
                module: ModuleId {
                    [salsa id]: 0,
                    name: "Test",
                },
                name: Symbol {
                    [salsa id]: 2,
                    text: "Foo",
                },
            }: Data(
                DataDecl {
                    type_: Data,
                    name: AbsoluteName {
                        [salsa id]: 0,
                        module: ModuleId {
                            [salsa id]: 0,
                            name: "Test",
                        },
                        name: Symbol {
                            [salsa id]: 2,
                            text: "Foo",
                        },
                    },
                    params: [],
                    kind: None,
                    constructors: [],
                },
            ),
        },
        values: {},
    },
    [
        Diagnostic {
            start: 18,
            end: 28,
            message: "Type signature of foo should be followed by its definition",
            file: "test.purs",
        },
    ],
)
