src/snapshots/purs_oxide__indexed_module__tests__typeclass.snap
---
source: src/indexed_module.rs
expression: "index_module(indoc!(\"\n        module Test where\n        \n        class Show a where\n          show :: a -> String\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            name: "Test",
        },
        types: {},
        values: {},
        classes: {
            AbsoluteName {
                module: ModuleId {
                    name: "Test",
                },
                name: Symbol {
                    text: "Show",
                },
            }: TypeClassDecl {
                name: AbsoluteName {
                    module: ModuleId {
                        name: "Test",
                    },
                    name: Symbol {
                        text: "Show",
                    },
                },
                constraints: [],
                params: [
                    (
                        Symbol {
                            text: "a",
                        },
                        None,
                    ),
                ],
                fundeps: [],
                methods: [
                    TypeDeclarationData {
                        ident: Symbol {
                            text: "show",
                        },
                        r#type: Located(
                            SourceSpan {
                                decl: Decl(
                                    AbsoluteName {
                                        module: ModuleId {
                                            name: "Test",
                                        },
                                        name: Symbol {
                                            text: "Show",
                                        },
                                    },
                                ),
                                start: 29,
                                end: 40,
                            },
                            FunctionType(
                                Located(
                                    SourceSpan {
                                        decl: Module(
                                            ModuleId {
                                                name: "Test",
                                            },
                                        ),
                                        start: 48,
                                        end: 49,
                                    },
                                    Var(
                                        Symbol {
                                            text: "a",
                                        },
                                    ),
                                ),
                                Located(
                                    SourceSpan {
                                        decl: Module(
                                            ModuleId {
                                                name: "Test",
                                            },
                                        ),
                                        start: 53,
                                        end: 59,
                                    },
                                    TypeConstructor(
                                        QualifiedName {
                                            module: None,
                                            name: Symbol {
                                                text: "String",
                                            },
                                        },
                                    ),
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
    },
    [],
)
