src/snapshots/purs_oxide__indexed_module__tests__value_decl.snap
---
source: src/indexed_module.rs
expression: "index_module(indoc!(\"\n        module Test where\n        foo = 1\n        \"))"
---
(
    IndexedModule {
        module_id: ModuleId {
            name: "Test",
        },
        types: {},
        values: {
            AbsoluteName {
                module: ModuleId {
                    name: "Test",
                },
                name: Symbol {
                    text: "foo",
                },
            }: ValueDecl {
                name: AbsoluteName {
                    module: ModuleId {
                        name: "Test",
                    },
                    name: Symbol {
                        text: "foo",
                    },
                },
                type_: None,
                equations: [
                    CaseBranch {
                        pats: [],
                        expr: Unconditional(
                            Located(
                                SourceSpan {
                                    decl: Module(
                                        ModuleId {
                                            name: "Test",
                                        },
                                    ),
                                    start: 24,
                                    end: 25,
                                },
                                Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
        classes: {},
        decls_ref_loc: {
            DeclId(
                Id {
                    value: 1,
                },
            ): 18,
        },
    },
    [],
)
